[gd_scene load_steps=6 format=2]

[ext_resource path="res://card_slot/card_slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/world.gd" type="Script" id=2]
[ext_resource path="res://world/unit_probabilities.tres" type="Curve" id=3]
[ext_resource path="res://card_slot/panel_style.tres" type="StyleBox" id=4]
[ext_resource path="res://unit/sounds/African1.mp3" type="AudioStream" id=5]

[node name="World" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )
probability_curve = ExtResource( 3 )

[node name="VB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 70
alignment = 1

[node name="EnemyCards" type="HBoxContainer" parent="VB"]
margin_top = 56.0
margin_right = 1920.0
margin_bottom = 332.0
custom_constants/separation = 20
alignment = 1

[node name="CardSlot" parent="VB/EnemyCards" instance=ExtResource( 1 )]
margin_left = 452.0
margin_right = 639.0
margin_bottom = 276.0

[node name="CardSlot2" parent="VB/EnemyCards" instance=ExtResource( 1 )]
margin_left = 659.0
margin_right = 846.0
margin_bottom = 276.0

[node name="CardSlot3" parent="VB/EnemyCards" instance=ExtResource( 1 )]
margin_left = 866.0
margin_right = 1053.0
margin_bottom = 276.0

[node name="CardSlot4" parent="VB/EnemyCards" instance=ExtResource( 1 )]
margin_left = 1073.0
margin_right = 1260.0
margin_bottom = 276.0

[node name="CardSlot5" parent="VB/EnemyCards" instance=ExtResource( 1 )]
margin_left = 1280.0
margin_right = 1467.0
margin_bottom = 276.0

[node name="PlayerCards" type="HBoxContainer" parent="VB"]
margin_top = 402.0
margin_right = 1920.0
margin_bottom = 678.0
custom_constants/separation = 20
alignment = 1

[node name="CardSlot" parent="VB/PlayerCards" instance=ExtResource( 1 )]
margin_left = 452.0
margin_right = 639.0
margin_bottom = 276.0
slot_type = 0

[node name="CardSlot2" parent="VB/PlayerCards" instance=ExtResource( 1 )]
margin_left = 659.0
margin_right = 846.0
margin_bottom = 276.0
slot_type = 0

[node name="CardSlot3" parent="VB/PlayerCards" instance=ExtResource( 1 )]
margin_left = 866.0
margin_right = 1053.0
margin_bottom = 276.0
slot_type = 0

[node name="CardSlot4" parent="VB/PlayerCards" instance=ExtResource( 1 )]
margin_left = 1073.0
margin_right = 1260.0
margin_bottom = 276.0
slot_type = 0

[node name="CardSlot5" parent="VB/PlayerCards" instance=ExtResource( 1 )]
margin_left = 1280.0
margin_right = 1467.0
margin_bottom = 276.0
slot_type = 0

[node name="ShopCards" type="HBoxContainer" parent="VB"]
margin_top = 748.0
margin_right = 1920.0
margin_bottom = 1024.0
custom_constants/separation = 20
alignment = 1

[node name="VB" type="VBoxContainer" parent="VB/ShopCards"]
margin_left = 377.0
margin_right = 508.0
margin_bottom = 276.0
custom_constants/separation = 50

[node name="Reroll" type="Button" parent="VB/ShopCards/VB"]
margin_right = 131.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "Reroll"

[node name="ClearTeam" type="Button" parent="VB/ShopCards/VB"]
margin_top = 163.0
margin_right = 131.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "Clear Player Deck"

[node name="CardSlot" parent="VB/ShopCards" instance=ExtResource( 1 )]
margin_left = 528.0
margin_right = 715.0
margin_bottom = 276.0

[node name="CardSlot2" parent="VB/ShopCards" instance=ExtResource( 1 )]
margin_left = 735.0
margin_right = 922.0
margin_bottom = 276.0

[node name="CardSlot3" parent="VB/ShopCards" instance=ExtResource( 1 )]
margin_left = 942.0
margin_right = 1129.0
margin_bottom = 276.0

[node name="CardSlot4" parent="VB/ShopCards" instance=ExtResource( 1 )]
margin_left = 1149.0
margin_right = 1336.0
margin_bottom = 276.0

[node name="CardSlot5" parent="VB/ShopCards" instance=ExtResource( 1 )]
margin_left = 1356.0
margin_right = 1543.0
margin_bottom = 276.0

[node name="RerollSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="VB/ShopCards/VB/Reroll" to="." method="_on_Reroll_pressed"]
[connection signal="pressed" from="VB/ShopCards/VB/ClearTeam" to="." method="_on_Blank_pressed"]
